--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container" id="card">
     
     <div class="container-star">
-      <img src="/images/icon-star.svg" alt="star">
+      <img src="images/icon-star.svg" alt="star">
     </div>
 
     <div class="title">
@@ -42,7 +42,7 @@
 
   <div class="container hidden" id="tnx">
 
-    <img src="/images/illustration-thank-you.svg" alt="">
+    <img src="images/illustration-thank-you.svg" alt="">
 
     <div class="title">Thank You!</div>
 
